--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">assistant</string>
+    <string name="app_name">Assistant</string>
     <string name="aa">Aa</string>
     <string name="send_button">Send Button</string>
 </resources>
